--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,8 +48,17 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
 }
 
+h1 {
+    font-size: 2rem;
+    font-weight: 800;
+}
+
 p {
     font-size: 1.1rem;
+}
+
+section {
+    padding: 2rem;
 }
 
 /* Elements
@@ -88,7 +97,7 @@ a:active {
 
 /* Header
 --------------------------------------------- */
-.header {
+#header {
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
@@ -123,7 +132,7 @@ a:active {
     display: block;
 }
 
-.header nav {
+#header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -151,7 +160,7 @@ a:active {
 }
 
 .header-menu a:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     color: var(--text-colour);
 }
 
@@ -227,31 +236,54 @@ a:active {
 --------------------------------------------- */
 main {
     background-color:  #A2A2A2;
+    margin: 8rem 0;
 }
 
-.about-me {
-    padding: 2rem;
-}
-
-.about-me-container {
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--primary-colour);
-    line-height: 2;
+    margin: 0 auto;
+    padding: 2rem 3rem 3rem;
     max-width: 50rem;
-    margin: 5rem auto 0;
-    padding: 2rem;
     border-radius: 1rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
+    background-color: var(--primary-colour);
+    box-shadow: var(--box-shadow);
 }
 
-.about-me-container h1 {
-    font-size: 2rem;
-    font-weight: 800;
+.container h1 {
     color: var(--accent-colour)
 }
 
+.about-me-container {
+    line-height: 2;
+}
+
+.projects-header .projects-selector {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.projects-selector button {
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: var(--text-colour);
+    font-size: 1.3rem;
+
+    transition: transform 0.3s ease;
+}
+.projects-selector button:hover {
+    transform: translateY(-0.5rem);
+}
+
+.project-selector-btn.active {
+    text-decoration: underline;
+    text-underline-offset: 1em;
+    text-decoration-color: var(--accent-colour);
+}
 
 /* Footer
 --------------------------------------------- */
