--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,6 +267,9 @@ a:active {
     color: var(--accent-colour)
 }
 
+#projects-section {
+    margin-top: 3rem;
+}
 
 .projects-header {
     max-width: 35rem;
@@ -302,7 +305,7 @@ a:active {
     display: none;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 2rem auto 0;
+    margin: 3rem auto 0;
     max-width: 55rem;
     gap: 3rem;
 }
