--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,8 +136,8 @@ a:active {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    width: 100%;
+    /* position: fixed; */
+    /* width: 100%; */
     background-color: var(--primary-colour);
     padding: 1rem 0;
 }
@@ -176,6 +176,7 @@ a:active {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     height: 100vh;
     padding: 1rem;
@@ -195,7 +196,7 @@ a:active {
     font-size: 3rem;
 }
 
-.intro-banner p:last-child {
+.intro-banner p:nth-child(3) {
     font-size: 2rem;
 }
 
@@ -203,6 +204,28 @@ a:active {
     color: var(--accent-colour);
     font-weight: 650;
 }
+
+#nav-down {
+    color: var(--accent-colour);
+    font-size: 64px;
+}
+
+.nav-down-btn {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    bottom: 55px;
+    margin: 0 auto;
+    transition: opacity 1s ease-in-out;
+    animation: 2s bounce infinite normal;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+    40% {transform: translateY(-30px);} 
+    60% {transform: translateY(-15px);} 
+}
+
 
 @media (min-width: 37.5em) {
     .menu-toggle {
