--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,6 +210,7 @@ a:active {
 #nav-down {
     color: var(--accent-colour);
     font-size: 64px;
+    padding: 1rem;
 }
 
 .nav-down-btn {
@@ -381,7 +382,7 @@ a:active {
 }
 
 .projects-header {
-    max-width: 35rem;
+    max-width: 45rem;
 }
 
 .projects-header .projects-selector {
@@ -398,6 +399,7 @@ a:active {
     border: none;
     color: var(--text-colour);
     font-size: 1.3rem;
+    padding: 1rem;
 
     transition: transform 0.3s ease;
 }
