--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,7 +249,7 @@ a:visited {
 }
 
 .musical-note:nth-child(1) {
-    left: 10%; animation-delay: 0;
+    left: 10%;
 }
 .musical-note:nth-child(2) {
     left: 20%; animation-delay: -5s;
