--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@
 *, *:before, *:after {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -382,7 +383,7 @@ a:visited {
 }
 
 .projects-header {
-    max-width: 45rem;
+    max-width: 50rem;
 }
 
 .projects-header .projects-selector {
@@ -427,11 +428,11 @@ a:visited {
 }
 
 .project-article {
-    flex: 1 1 20rem;
+    flex: 1 1 15rem;
     background-color: var(--primary-colour);
     line-height: 1.5;
     border-radius: 0.5rem;
-    max-width: 15rem;
+    max-width: 20rem;
     padding: 2rem;
     text-align: center;
     box-shadow: var(--box-shadow);
@@ -442,6 +443,7 @@ a:visited {
 
 .project-article > a {
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -471,7 +473,8 @@ a:visited {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.9);
     transform: translateY(-100%);
 
     transition: transform 0.5s ease, opacity 0.5s ease;
@@ -479,11 +482,29 @@ a:visited {
 
 .project-overlay p {
     font-size: 1.2rem;
+    transform: translateY(-50%);
 }
 
 .project-article:hover .project-overlay{
     transform: translateY(0);
-    opacity:  1;
+    opacity: 1;
+}
+
+.completed-project-overlay {
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.completed-project-overlay h3 {
+    color: var(--accent-colour);
+    text-align: center;
+    margin: 0;
+}
+
+.completed-project-overlay p {
+    font-size: 0.8rem;
+    text-align: left;
+    transform: none;
 }
 
 .projects-container.swoop-left {
@@ -519,6 +540,14 @@ a:visited {
 @media (min-width: 21em) {
     .project-overlay p {
         font-size: 1.5rem;
+    }
+
+    .completed-project-overlay {
+        padding: 2rem;
+    }
+
+    .completed-project-overlay p {
+        font-size: clamp(0.8rem, 1.5vw, 1rem);
     }
 }
 
