Fix intro banner positioning

--- a/project-pages/country-website/styles/style.css
+++ b/project-pages/country-website/styles/style.css
@@ -172,7 +172,8 @@ article,
     left: 0;
     right: 0;
     text-align: center;
-    background-color: var(--accent-colour-1);
+    border-radius: 0 0 1rem 1rem;
+    background-color: var(--primary-colour);
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
 }
 
@@ -275,7 +276,7 @@ article,
 .nav-down-btn {
     cursor: pointer;
     position: absolute;
-    bottom: 0px;
+    bottom: 20px;
 
     transition: opacity 1s ease-in-out;
     animation: 2s bounce-down infinite normal;
