--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
+    position: relative;
 
     background-image: url('../images/black-background.jpg');
     background-position: center;
@@ -172,7 +173,7 @@ a:visited {
     display: block;
 }
 
-.intro-banner {
+/* .intro-banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -181,6 +182,18 @@ a:visited {
     height: 100vh;
     padding: 1rem;
     gap: 2rem;
+    z-index: 2;
+} */
+
+.intro-banner {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 2rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
     z-index: 2;
 }
 
@@ -215,10 +228,17 @@ a:visited {
 .nav-down-btn {
     cursor: pointer;
     opacity: 0;
-    position: absolute;
-    bottom: 3%;
-    margin: 0 auto;
+    position: relative;
 
+    text-align: center;
+
+    /* bottom: 30rem; */
+    /* left: 50%; */
+
+    bottom: -75%;
+
+    /* left: 50%;
+    transform: translateX(-50%); */
     transition: opacity 1s ease-in-out;
     animation: 2s bounce-down infinite normal;
     z-index: 2;
